--- a/design/src/main/AndroidManifest.xml
+++ b/design/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.t123i456x.stylechange">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,6 +26,7 @@
             android:launchMode="singleTask"/>
 
         <activity android:name=".Video"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:launchMode="singleTask">
         </activity>
 
