--- a/design/build.gradle
+++ b/design/build.gradle
@@ -3,8 +3,6 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
 
-
-
     defaultConfig {
         applicationId "com.t123i456x.stylechange"
         minSdkVersion 19
@@ -14,6 +12,13 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+    }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
     }
 
     buildTypes {
@@ -33,6 +38,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:25.3.1'
+    implementation 'com.danikula:videocache:2.7.1'
     implementation 'com.android.support:design:25.3.1'
     implementation 'com.android.support:cardview-v7:25.3.1'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
